--- a/style/style.css
+++ b/style/style.css
@@ -1,57 +1,144 @@
+/* styles.css */
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: var(--font);
 }
 
 :root{
-    --color-primary: #ce4902;
-    --font: "Open Sans", sans-seriff;
+    --color-hover: rgb(158, 10, 191);
 }
 
 body{
     width: 100%;
     min-height: 100vh;
+
+    font-family: sans-serif;
 }
 
-.top-bar{
-    background-color: #000;
-    border-bottom: 5px solid #ce4902;
-    padding: 15px;
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.container h1{
+    font-size: 2.2rem;
+    margin: 1.5rem 0 0;
+    text-align: center;
+}
+
+.container h2{
+    text-align: center;
+    font-weight: 300;
+    color: var(--color-hover);
+    text-shadow: 1px 0 1px black;
+    margin: 3px 0 20px 0;
+}
+
+.container .navegacao{
+    display: flex;
+    background-image: linear-gradient(to right, rgb(98, 6, 69), rgb(2, 2, 2));
+    align-items: center;
+    justify-content: space-between;
+    padding-inline: 30px;
+}
+
+.container .navegacao .nav-list{
+    display: flex;
+    gap: 1.5rem;
+    list-style-type: none;
+    padding: 10px;
+}
+
+.container .navegacao .nav-list li a{
+    text-decoration: none;
+    color: #fff;
+    display: block;
+    padding: 10px;
+    font-weight: bold;
+}
+
+.container .navegacao .nav-list li a:hover{
+    color: #ccc;
+}
+
+.container .navegacao .nav-list li:nth-child(3){
+    background-color: rgb(130, 6, 157);
+    border-radius: 10px;
+    font-weight: 600;
+    transition: .5s;
+    color: #fff;
+}
+
+
+.container .navegacao .nav-list li:nth-child(3){
+    background-color: rgb(130, 6, 157);
+    border-radius: 10px;
+    font-weight: 600;
+    transition: .5s;
+    
+}
+
+.container .navegacao .nav-list li:nth-child(3):hover{
+    background-color: var(--color-hover);
+}
+
+.container h2{
+    margin:20px;
+    font-size: 1.7rem;
+}
+
+/* conteudo */
+
+main .container {
+    display: flex;
+    align-items: center;
+    background-color: #898989;
+}
+
+main .container .section-left{
+    padding-inline: 30px;
+    width: 50%;
+}
+
+main .container .section-left p{
+    font-size: 1.3rem;
+    text-align: center;
+    color: #fffefe;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 2rem;
+}
+
+/* seção direita */
+
+.container-right h2{
+    text-align: center;
+}
+
+.container-right .section-right{
+    display: flex;
+    align-items: center;
+    padding-inline: 30px;
+}
+
+.container-right h3{
+    text-align: center;
+    margin: 20px;
+    font-size: 1.8rem;
+    color: var(--color-hover);
+}
+
+.container-right .section-content p{
+    font-size: 1.3rem;
+    line-height: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+footer{
+    background-color: black;
     text-align: center;
     color: #fff;
-    font-size:1.3rem;
-    font-weight: bold;
+    padding: 15px;
 }
-
-.cabecalho{
-    max-width: 888px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-.cabecalho .title{
-    margin-top: 60px;
-    font-size: 43px;
-    font-weight: bold;
-    line-height: 46px;
-}
-
-.cabecalho .sub-title{
-    font-size: 18px;
-    font-weight: 400;
-    margin: 15px 0 ;
-
-}
-
-a{
-    text-decoration: none;
-}
-
-.socials img{
-    width: 25px;
-    padding: 15px 5px 15px 0;
-}
-
-
