--- a/style/contato.css
+++ b/style/contato.css
@@ -8,7 +8,7 @@
 body{
     width: 100%;
     min-height: 100vh;
-    background-image: url(/imagem/fundobg.jpg);
+    background-image: url(imagem/fundobg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
