--- a/style/sobre.css
+++ b/style/sobre.css
@@ -13,10 +13,13 @@ body{
 }
 
 header{
+    position: fixed;
+    display: block;
     background-image: linear-gradient(to right, rgb(98, 6, 69), rgb(2, 2, 2));
 }
 
 header .navegacao{
+    
     display: flex;
     background-image: linear-gradient(to right, rgb(98, 6, 69), rgb(2, 2, 2));
     align-items: center;
